--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ChatApp-client",
   "private": true,
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Real-time chat application built with React, Vite, and WebSocket for seamless communication between users.",
   "type": "module",
   "scripts": {
@@ -43,11 +43,11 @@
   },
   "repositories": {
     "type": "git",
-    "url": "https://github.com/junaidsaleem10144/chatApp"
+    "url": "https://github.com/junaid10144/chatApp"
   },
   "author": "Junaid Saleem",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/junaidsaleem10144/chatApp/issues"
+    "url": "https://github.com/junaid10144/chatApp/issues"
   }
 }
